--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antlr4": "~4.7.1"
   },
   "devDependencies": {
-    "eslint": "~5.6.0"
+    "eslint": "~5.6.0",
+    "jsondiffpatch": "^0.3.11"
   }
 }
