--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "run": "node ./app.js"
   },
   "dependencies": {
-    "antlr4": "~4.7.1"
+    "antlr4": "~4.7.1",
+    "commander": "^2.18.0"
   },
   "devDependencies": {
     "eslint": "~5.6.0",
